scene fxml priorityPetko.fxml